# Crew_Writer

./: .gitignore  FUTURE_IMPLEMENTATION.md  README.md  blog_post.md  crew.py  custom_tools.py  error_log.txt  error_log_utf8.txt  exec_2.txt  execution_log.txt  full_output.txt  main.py  pyproject.toml  test_access.py  test_bedrock.py  test_nvidia_image.py  test_out.txt  verify_image_model.py
config/: agents.yaml  tasks.yaml
output/: blog_post.md  picture.txt
